@@ -28,8 +28,10 @@ apt (0.8.15.3) UNRELEASED; urgency=low
     - remove /etc/apt/secring.gpg if it is an empty file
   * doc/apt-cache.8.xml:
     - apply madison typofix from John Feuerstein, thanks! (Closes: #633455)
+  * apt-pkg/policy.cc:
+    - emit an error on unknown APT::Default-Release value (Closes: #407511)
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Sat, 16 Jul 2011 14:55:03 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Sat, 16 Jul 2011 16:43:37 +0200
 
 apt (0.8.15.2) unstable; urgency=high
 
